--- a/src/main/resources/hibernate_postgres.properties
+++ b/src/main/resources/hibernate_postgres.properties
@@ -1,14 +1,11 @@
 hibernate.connection.driver_class=org.postgresql.Driver
-#hibernate.connection.url=jdbc:postgresql://34.131.94.224:5432/splitsharedata
-#hibernate.connection.username=postgres
-#hibernate.connection.password=12345678
 
 hibernate.connection.url=jdbc:postgresql://localhost:5432/assignment
 hibernate.connection.username=postgres
 hibernate.connection.password=1147
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create
 hibernate.show_sql=true
 hibernate.format_sql=true
 spring.jpa.show-sql=true
