--- a/src/main/resources/hibernate_postgres.properties
+++ b/src/main/resources/hibernate_postgres.properties
@@ -5,7 +5,7 @@ hibernate.connection.username=postgres
 hibernate.connection.password=1147
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
 hibernate.format_sql=true
 spring.jpa.show-sql=true
