credentials of database on render: updated

--- a/src/main/resources/hibernate_postgres.properties
+++ b/src/main/resources/hibernate_postgres.properties
@@ -1,8 +1,12 @@
 hibernate.connection.driver_class=org.postgresql.Driver
 
-hibernate.connection.url=jdbc:postgresql://localhost:5432/assignment
-hibernate.connection.username=postgres
-hibernate.connection.password=1147
+#hibernate.connection.url=jdbc:postgresql://localhost:5432/assignment
+#hibernate.connection.username=postgres
+#hibernate.connection.password=1147
+
+hibernate.connection.url=postgresql://postgresql://dpg-cueail5ds78s73aakcj0-a.oregon-postgres.render.com/splitshare
+hibernate.connection.username=splitshare_user
+hibernate.connection.password=Cg3ddjmeMLa75zdM0LF6EIrStuWgFtbv
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.hbm2ddl.auto=update
