fixing remote db url

--- a/src/main/resources/hibernate_postgres.properties
+++ b/src/main/resources/hibernate_postgres.properties
@@ -4,7 +4,7 @@ hibernate.connection.driver_class=org.postgresql.Driver
 #hibernate.connection.username=postgres
 #hibernate.connection.password=1147
 
-hibernate.connection.url=postgresql://dpg-cueail5ds78s73aakcj0-a.oregon-postgres.render.com/splitshare
+hibernate.connection.url=postgresql://splitshare_user:Cg3ddjmeMLa75zdM0LF6EIrStuWgFtbv@dpg-cueail5ds78s73aakcj0-a.oregon-postgres.render.com/splitshare
 hibernate.connection.username=splitshare_user
 hibernate.connection.password=Cg3ddjmeMLa75zdM0LF6EIrStuWgFtbv
 
